# zk-ress

./: .env.example  .gitignore  Cargo.toml  README.md  build_and_run_hive.sh  deny.toml  justfile
.github/workflow/: ci.yml
.github/workflows/: ci.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs  test_utils.rs  utils.rs
crates/engine/: Cargo.toml
crates/engine/src/: downloader.rs  engine.rs  lib.rs
crates/engine/src/download/: futs.rs  mod.rs
crates/engine/src/tree/: block_buffer.rs  mod.rs  outcome.rs  root.rs
crates/evm/: Cargo.toml
crates/evm/src/: db.rs  executor.rs  lib.rs
crates/net/network/: Cargo.toml
crates/net/network/src/: handle.rs  launch.rs  lib.rs  manager.rs
crates/net/protocol/: Cargo.toml  README.md
crates/net/protocol/src/: connection.rs  handlers.rs  lib.rs  message.rs  provider.rs  types.rs
crates/network/: Cargo.toml
crates/network/src/: handle.rs  lib.rs  manager.rs  p2p.rs  rpc.rs
crates/node/: Cargo.toml
crates/node/src/: block_buffer.rs  engine.rs  errors.rs  lib.rs  root.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs  witness.rs  witness_rpc.rs
crates/provider/: Cargo.toml
crates/provider/src/: chain_state.rs  database.rs  errors.rs  lib.rs  network.rs  provider.rs
crates/provider/src/backends/: disk.rs  memory.rs  mod.rs
crates/provider/src/storage/: mod.rs
crates/provider/src/storage/backends/: disk.rs  memory.rs
crates/ress/: Cargo.toml  README.md
crates/ress/src/: lib.rs  node.rs  test_utils.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
crates/stateful/: Cargo.toml  README.md
crates/stateful/src/: main.rs
crates/stateless/: Cargo.toml  README.md
crates/stateless/src/: main.rs
crates/storage/: Cargo.toml
crates/storage/src/: errors.rs  lib.rs
crates/storage/src/backends/: disk.rs  memory.rs  network.rs
crates/subprotocol/: Cargo.toml  README.md
crates/subprotocol/src/: lib.rs
crates/subprotocol/src/connection/: handler.rs  mod.rs
crates/subprotocol/src/protocol/: event.rs  handler.rs  mod.rs  proto.rs
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs  rpc_adapter.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs  root.rs
crates/vm/: Cargo.toml
crates/vm/src/: db.rs  errors.rs  executor.rs  lib.rs
docker/: readme.md
docker/ress/: Dockerfile  docker-compose.yml  lighthouse.yml
etc/grafana/dashboards/: ress.json
fixtures/: mainnet-21555421.json  mainnet-21555422.json
fixtures/header/: mainnet-21592410.json
fixtures/payload/: mainnet-21592411.json
