[package]
name = "ress-common"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
alloy-rpc-types.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
reth-network.workspace = true
reth-transaction-pool.workspace = true

eyre.workspace = true
serde_json.workspace = true
