[package]
name = "ress-common"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
# ress
ress-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }

# reth
reth-network.workspace = true
reth-transaction-pool.workspace = true
reth-primitives.workspace = true

# misc
eyre.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
