[package]
name = "zk-ress-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# ress
zk-ress-provider.workspace = true
zk-ress-network.workspace = true
zk-ress-verifier.workspace = true

# reth
reth-ress-protocol.workspace = true
reth-zk-ress-protocol.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-chainspec.workspace = true
reth-errors.workspace = true
reth-provider.workspace = true
reth-consensus.workspace = true
reth-trie.workspace = true
reth-trie-sparse.workspace = true
reth-engine-tree.workspace = true
reth-chain-state.workspace = true
reth-ethereum-engine-primitives.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-metrics.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-engine.workspace = true

# misc
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
rayon.workspace = true
itertools.workspace = true
metrics.workspace = true
strum_macros.workspace = true
schnellru.workspace = true
humansize = "2.0"

[dev-dependencies]
reth-testing-utils.workspace = true
alloy-eips.workspace = true
