[package]
name = "zk-ress-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# ress
zk-ress-provider.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true
alloy-eips.workspace = true

# reth
reth-primitives.workspace = true
reth-provider.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-revm.workspace = true
reth-trie-sparse.workspace = true
reth-ress-protocol.workspace = true
reth-chainspec.workspace = true

# misc
tracing.workspace = true
