[package]
name = "ress-network"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# ress
ress-subprotocol.workspace = true
ress-common.workspace = true

# reth
reth-primitives.workspace = true
reth-chainspec.workspace = true
reth-network.workspace = true
reth-provider.workspace = true
reth-engine-primitives.workspace = true
reth-rpc-builder.workspace = true
reth-rpc-engine-api.workspace = true
reth-node-ethereum.workspace = true
reth-payload-builder.workspace = true
reth-transaction-pool.workspace = true
reth-node-api.workspace = true
reth-tasks.workspace = true

# alloy
alloy-rpc-types-engine.workspace = true

# misc
tokio.workspace = true
tracing.workspace = true
