[package]
name = "ress-network"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# ress
ress-subprotocol.workspace = true
ress-common.workspace = true

# reth
reth-network.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true

# misc
tokio.workspace = true
tracing.workspace = true
