[package]
name = "ress-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# ress
ress-common.workspace = true
ress-network.workspace = true
ress-rpc.workspace = true
ress-vm.workspace = true
ress-provider.workspace = true
ress-testing.workspace = true

# reth
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-chainspec.workspace = true
reth-consensus.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-rpc-builder.workspace = true
reth-trie-sparse.workspace = true
reth-errors.workspace = true
reth-network-peers.workspace = true
reth-trie.workspace = true
reth-engine-tree.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true

# misc
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
rayon.workspace = true
itertools.workspace = true
