[package]
name = "ress-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-trie.workspace = true

# `serde` feature
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
