[package]
name = "ress-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# ress
ress-protocol.workspace = true

# alloy
alloy-primitives.workspace = true

# reth
reth-primitives.workspace = true
reth-chainspec.workspace = true
reth-storage-errors.workspace = true
reth-db = { workspace = true, features = ["mdbx"] }
reth-db-api.workspace = true

# misc
parking_lot.workspace = true
eyre.workspace = true
itertools.workspace = true

[dev-dependencies]
derive_more.workspace = true
tempfile = "3.8"
