[package]
name = "zk-ress-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
zk-ress-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-eips.workspace = true

# reth
reth-zk-ress-protocol.workspace = true
reth-primitives.workspace = true
reth-chainspec.workspace = true
reth-storage-errors.workspace = true

# misc
parking_lot.workspace = true
itertools.workspace = true

[dev-dependencies]
derive_more.workspace = true
tempfile = "3.8"