[package]
name = "stateless"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true

ress-subprotocol.workspace = true

eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
reth.workspace = true
reth-network.workspace = true
reth-network-api.workspace = true
reth-node-ethereum.workspace = true
futures.workspace = true
