[package]
name = "ress-subprotocol"
rust-version.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
# ress
ress-primitives = { workspace = true, features = ["serde"] }
ress-common.workspace = true

# reth
reth-eth-wire.workspace = true
reth-network.workspace = true
reth-network-api.workspace = true
reth-revm.workspace = true

# alloy
alloy-primitives.workspace = true

# misc
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
bincode.workspace = true
tracing.workspace = true
