[package]
name = "ress-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# ress
ress-protocol.workspace = true

# reth
reth-storage-errors.workspace = true
reth-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-debug.workspace = true
alloy-rpc-client.workspace = true

# misc
tokio.workspace = true
parking_lot.workspace = true
eyre.workspace = true
